# MyRendererFoundation

./: README.md
Gnosis/: CMakeLists.txt  main.cpp  note.md
Gnosis/Crux/Perception/: Frag1.shader  Vert1.shader
Gnosis/Hermetica/: FileOracle.cpp  FileOracle.hpp  Game.cpp  Godhead.hpp  Interface.cpp  Interface.hpp  OpenGospeL.cpp  OpenGospeL.hpp  ResourceSack.cpp  ResourceSack.hpp  TextureSeer.cpp  TextureSeer.hpp
Gnosis/Provisions/: Note.txt
Gnosis/Provisions/gladAndKHR/glad/: gl.h
